# google_colab

./: LICENSE  Makefile  Mocks.ipynb  README.md  environment.ipynb  pyproject.toml
example/: web.py
example/web/: rest.py
tests/: README.md  conftest.py
tests/integration/: test_web.py
tests/unit/: test_fixture.py  test_web.py
